@@ -81,15 +81,3 @@ class Master(object):
             if serial > packages.get(package, 0):
                 packages[package] = serial
         return packages
-
-    # The unicode calls in the next two methods here are a stop-gap to tell
-    # xmlrpc2 (or better: six) that we don't want base64 encoding because this
-    # is text and not a binary string. PyPI currently dies when presented with
-    # base64 as it uses the SimpleXMLRPCServer code and gets handed an
-    # xmlrpclib.Binary instance (for crying out loud).
-
-    def package_releases(self, package):
-        return self.rpc().package_releases(unicode(package), True)
-
-    def release_urls(self, package, version):
-        return self.rpc().release_urls(unicode(package), version)
